syntax = "proto3";

package usercenter;

option go_package = "pb";

message User {
  int64 id = 1;
  string phone = 2;
  string nickname = 3;
  int64 sex = 4;
  string avatar = 5;
}

message RegisterWithEmailReq {
  string email = 1;
  string nickname = 2;
}

message LoginWithEmailReq {
  string email = 1;
  string password = 2;
}

message LoginSuccessResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

message GetUserInfoReq {
  int64 id = 1;
}

message GetUserInfoResp {
  User user = 1;
}

service Usercenter {
  rpc registerWithEmail(RegisterWithEmailReq) returns (LoginSuccessResp);
  rpc loginWithEmail(LoginWithEmailReq) returns(LoginSuccessResp);
  rpc getUserInfo(GetUserInfoReq) returns(GetUserInfoResp);
}
